.kustomize/media/jellyfin/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  annotations:
    tailscale.com/expose: "true"
  name: jellyfin
  namespace: media
spec:
  ports:
  - name: main
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
