.kustomize/media/jellyfin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: jellyfin-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: media.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
